# Android_Cascade_NDK

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/github/orbianta/androidcascadendk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  app.h
app/src/main/java/github/orbianta/androidcascadendk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-v21/: themes.xml
app/src/test/java/github/orbianta/androidcascadendk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
